--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,16 @@
 
 # Defaults vars file for redis role
 
+redis_repository_cache_valid_time: 3600
+redis_not_use_system_version: True
+redis_repository_key_id: 'C7917B12'
+redis_repository_url: "http://ppa.launchpad.net/chris-lea/redis-server/{{ ansible_distribution | lower }}"
+redis_repository_file:
+  name: 'redis.list'
+  owner: 'root'
+  group: 'root'
+  mode: '0644'
+
+redis_service_state: 'started'
+redis_service_enabled: True
+
