Add ferm integration

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,3 +15,14 @@ redis_repository_file:
 redis_service_state: 'started'
 redis_service_enabled: True
 
+# Firewall configuration
+#-----------------------
+redis_firewall_managed_with_ferm: False
+redis_ferm_input_rules_file: '/etc/ferm/input/redis.conf'
+redis_ferm_files_owner: 'root'
+redis_ferm_files_group: 'root'
+redis_ferm_files_mode: '0400'
+redis_ferm_main_config_file: '/etc/ferm/ferm.conf'
+redis_ferm_service_name: 'ferm'
+redis_ferm_input_rules:
+  - 'proto tcp mod tcp dport 6379 ACCEPT;'
