--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,6 +23,13 @@
     - redis
     - install
 
+- name: Include tasks about firewall configuration with ferm
+  include: "{{ role_path }}/tasks/manage_firewall_rules_with_ferm.yml"
+  when: redis_firewall_managed_with_ferm
+  tags:
+    - config
+    - redis
+
 - name: Enable service
   become: True
   service:
