--- a/tests/test_travis.yml
+++ b/tests/test_travis.yml
@@ -9,5 +9,6 @@
   post_tasks:
     - include: ./test_common.yml
   vars:
+    redis_firewall_managed_with_ferm: "{{ lookup('env','FERM_MANAGEMENT') }}"
     role_name: "{{ lookup('env','TRAVIS_REPO_SLUG') }}"
 
