--- a/tests/test_vagrant.yml
+++ b/tests/test_vagrant.yml
@@ -9,5 +9,6 @@
   post_tasks:
     - include: ./test_common.yml
   vars:
+    redis_firewall_managed_with_ferm: True
     role_name: "{{ lookup('env','ANSIBLE_ROLE_NAME') }}"
 
