--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,8 +12,111 @@ redis_repository_file:
   group: 'root'
   mode: '0644'
 
-redis_service_state: 'started'
-redis_service_enabled: True
+redis_server_service_state: 'started'
+redis_server_service_enabled: True
+
+# Files configuration
+#--------------------
+redis_configuration_directory: '/etc/redis'
+redis_server_configuration_file_name: 'redis.conf'
+redis_server_configuration_file_owner: 'redis'
+redis_server_configuration_file_group: 'redis'
+redis_server_configuration_file_mode: '0600'
+
+# General server configuration
+redis_server_daemonize: 'yes'
+redis_server_pid_file: '/var/run/redis/redis-server.pid'
+redis_server_port: 6379
+redis_server_bind_ip:
+  - 127.0.0.1
+redis_server_use_unixsocket: False
+redis_server_unixsocket: '/var/run/redis/redis.sock'
+redis_server_unixsocketperm: 755
+redis_server_timeout: 0
+redis_server_tcp_keepalive: 0
+redis_server_loglevel: 'notice'
+redis_server_logfile: '/var/log/redis/redis-server.log'
+redis_server_use_syslog: 'no'
+redis_server_syslog_enabled: 'no'
+redis_server_syslog_ident: 'redis'
+redis_server_syslog_facility: 'local0'
+redis_server_database: 16
+
+# Snapshotting server configuration
+redis_server_save:
+  - '900 1'
+  - '300 10'
+  - '60 10000'
+redis_server_stop_writes_on_bgsave_error: 'yes'
+redis_server_rdbcompression: 'yes'
+redis_server_rdbchecksum: 'yes'
+redis_server_dbfilename: 'dump.rdb'
+redis_server_dir: '/var/lib/redis'
+
+# Replication configuration
+redis_server_slaveof: False
+redis_server_slaveof_master_ip: ''
+redis_server_slaveof_master_port: ''
+redis_server_master_auth: ''
+redis_server_slave_serve_stale_data: 'yes'
+redis_server_slave_read_only: 'yes'
+redis_server_repl_ping_slave_period: 10
+redis_server_repl_timeout: 60
+redis_server_repl_disable_tcp_nodelay: 'no'
+redis_server_repl_backlog_size: '1mb'
+redis_server_repl_backlog_ttl: 3600
+redis_server_slave_priority: 100
+redis_server_min_slaves_to_write: 3
+redis_server_min_slaves_max_lag: 10
+
+# Security configuration
+redis_server_require_pass: ''
+redis_server_renamed_commands: []
+
+# Limits configuration
+redis_server_maxclients: 10000
+redis_server_limit_maxmemory: False
+redis_server_limit_maxmemory_size: 4000000000
+redis_server_maxmemory_policy: 'volatile-lru'
+redis_server_maxmemory_samples: 3
+
+# Append only mode configuration
+redis_server_appendonly: 'no'
+redis_server_appendfilename: 'appendonly.aof'
+redis_server_appendfsync: 'everysec'
+redis_server_no_appendfsync_on_rewrite: 'no'
+redis_server_auto_aof_rewrite_percentage: 100
+redis_server_auto_aof_rewrite_min_size: '64mb'
+
+# Lua scripting configuration
+redis_server_lua_time_limit: 5000
+
+# Slow log configuration
+redis_server_slowlog_log_slower_than: 10000
+redis_server_slowlog_max_len: 128
+
+# Event notification configuration
+redis_server_notify_keyspace_events: ''
+
+# Advanced configuration
+redis_server_hash_max_ziplist_entries: 512
+redis_server_hash_max_ziplist_value: 64
+redis_server_list_max_ziplist_entries: 512
+redis_server_list_max_ziplist_value: 64
+redis_server_set_max_intset_entries: 512
+redis_server_zset_max_ziplist_entries: 128
+redis_server_zset_max_ziplist_value: 64
+redis_server_activerehashing: 'yes'
+redis_server_client_output_buffer_limit:
+  - 'normal 0 0 0'
+  - 'slave 256mb 64mb 60'
+  - 'pubsub 32mb 8mb 60'
+redis_server_hz: 10
+redis_server_aof_rewrite_incremental_fsync: 'yes'
+
+# Includes
+redis_server_include: []
+
 
 # Firewall configuration
 #-----------------------
@@ -26,3 +129,4 @@ redis_ferm_main_config_file: '/etc/ferm/ferm.conf'
 redis_ferm_service_name: 'ferm'
 redis_ferm_input_rules:
   - 'proto tcp mod tcp dport 6379 ACCEPT;'
+
