--- a/tasks/manage_firewall_rules_with_ferm.yml
+++ b/tasks/manage_firewall_rules_with_ferm.yml
@@ -2,7 +2,7 @@
 
 # Add firewall rules managed by ferm
 
-- name: Create ferm input rules file
+- name: 'Create ferm input rules file'
   become: True
   template:
     src: "{{ role_path }}/templates/ferm_rules.conf.j2"
@@ -10,31 +10,34 @@
     owner: "{{ redis_ferm_files_owner }}"
     group: "{{ redis_ferm_files_group }}"
     mode: "{{ redis_ferm_files_mode }}"
-  register: redis_ferm_rules_change
+  register: 'redis_ferm_rules_change'
 
-- name: Check ferm rules
+
+- name: 'Check ferm rules'
   become: True
   command: "ferm -n {{ redis_ferm_main_config_file }}"
   changed_when: False
   ignore_errors: True
-  register: redis_ferm_check_configuration
+  register: 'redis_ferm_check_configuration'
 
-- name: Remove errored ferm config file
+
+- name: 'Remove errored ferm config file'
   become: True
   file:
     dest: "{{ redis_ferm_input_rules_file }}"
     state: 'absent'
-  when: redis_ferm_check_configuration | failed
+  when: "{{ redis_ferm_check_configuration | failed }}"
 
-- name: Exit due to ferm configuration error
+
+- name: 'Exit due to ferm configuration error'
   fail:
     msg: 'Ferm configuration error, fix it before continue !'
-  when: redis_ferm_check_configuration | failed
+  when: "{{ redis_ferm_check_configuration | failed }}"
 
-- name: Update ferm rules
+
+- name: 'Update ferm rules'
   become: True
   service:
     name: "{{ redis_ferm_service_name }}"
     state: 'restarted'
-  when: redis_ferm_rules_change.changed
-
+  when: "{{ redis_ferm_rules_change.changed }}"
