Remove ferm management

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,6 +14,4 @@ galaxy_info:
   galaxy_tags:
     - 'database'
     - 'nosql'
-dependencies:
-  - role: 'Temelio.ferm'
-    when: "{{ redis_firewall_managed_with_ferm }}"
+dependencies: []
