--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,15 +2,19 @@
 
 galaxy_info:
   author: 'Alexandre Chaussier'
-  description: 'Install and configure Redis'
+  description: 'Ansible role to install and configure Redis'
   company: 'Infopen (http://www.infopen.pro)'
   license: 'MIT'
   min_ansible_version: '2.0'
   github_branch: 'master'
   platforms:
+    - name: 'Debian'
+      versions:
+        - 'jessie'
     - name: 'Ubuntu'
       versions:
         - 'trusty'
+        - 'xenial'
   galaxy_tags:
     - 'database'
     - 'nosql'
