Update installation tasks management

--- a/tasks/install/debian_family.yml
+++ b/tasks/install/debian_family.yml
@@ -1,6 +1,13 @@
 ---
 
-# Specific install tasks for Ubuntu distribution
+# Specific install tasks for Debian family
+
+- name: 'INSTALL | APT | Manage repository key'
+  apt_key:
+    keyserver: "{{ redis_repository_keyserver }}"
+    id: "{{ redis_repository_key_id }}"
+  when: 'redis_manage_additional_repository'
+
 
 - name: 'INSTALL | APT | Configure additional repositories'
   apt_repository:
@@ -9,24 +16,8 @@
     filename: "{{ item.filename | default(omit) }}"
     mode: "{{ item.mode | default(omit) }}"
     state: "{{ item.state | default('present') }}"
-  register: 'redis_register_repository_list'
   with_items: "{{ redis_repositories }}"
-  when: 'redis_not_use_system_version'
-
-
-- name: 'INSTALL | APT | Manage repository key'
-  apt_key:
-    keyserver: "{{ redis_repository_keyserver }}"
-    id: "{{ redis_repository_key_id }}"
-  register: 'redis_register_repository_key'
-  when: 'redis_not_use_system_version'
-
-
-- name: 'INSTALL | APT | Update apt cache if repository changed'
-  apt:
-    update_cache: True
-  when: 'redis_register_repository_list.changed
-          or redis_register_repository_key.changed'
+  when: 'redis_manage_additional_repository'
 
 
 - name: 'INSTALL | APT | Update apt cache if repository not changed'
