Prepare sentinel integration
* Rename *redis_packages* to *redis_server_packages*
* Redis server management is now optional

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,15 +2,18 @@
 
 # Defaults vars file for redis role
 
-# Repository management
+# General
 redis_manage_additional_repository: True
+redis_manage_redis_server: True
+
+# Repository management
 redis_repository_cache_valid_time: 3600
 redis_repository_keyserver: "{{ _redis_repository_keyserver | default('') }}"
 redis_repository_key_id: "{{ _redis_repository_key_id | default('') }}"
 redis_repositories: "{{ _redis_repositories | default([]) }}"
 
 # Package management
-redis_packages: "{{ _redis_packages }}"
+redis_server_packages: "{{ _redis_server_packages }}"
 
 # Service management
 redis_server_service_name: "{{ _redis_server_service_name }}"
