--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,7 @@
 
 # General
 redis_manage_additional_repository: True
+redis_manage_redis_sentinel: False
 redis_manage_redis_server: True
 
 # Repository management
@@ -11,6 +12,10 @@ redis_repository_cache_valid_time: 3600
 redis_repository_keyserver: "{{ _redis_repository_keyserver | default('') }}"
 redis_repository_key_id: "{{ _redis_repository_key_id | default('') }}"
 redis_repositories: "{{ _redis_repositories | default([]) }}"
+
+
+# Redis server specific vars
+#------------------------------------------------------------------------------
 
 # Package management
 redis_server_packages: "{{ _redis_server_packages }}"
@@ -122,3 +127,15 @@ redis_server_aof_rewrite_incremental_fsync: 'yes'
 
 # Includes
 redis_server_include: []
+
+
+# Redis sentinel specific vars
+#------------------------------------------------------------------------------
+
+# Package management
+redis_sentinel_packages: "{{ _redis_sentinel_packages }}"
+
+# Service management
+redis_sentinel_service_name: "{{ _redis_sentinel_service_name }}"
+redis_sentinel_service_state: 'started'
+redis_sentinel_service_enabled: True
