--- a/molecule.yml
+++ b/molecule.yml
@@ -6,7 +6,8 @@ ansible:
   raw_env_vars:
     ANSIBLE_NOCOWS: 1
   group_vars:
-    all: {}
+    all:
+      redis_manage_redis_sentinel: True
 dependency:
   name: 'galaxy'
 driver:
