Add optimization settings to remove warnings
* Add Transparent Huge Pages management for tests only
* Manage vm.overcommit_memory
* Manage net.core.somaxconn

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,15 @@
     - 'role::redis::init'
 
 
+- name: 'INSTALL | Manage system settings to increase Redis performances'
+  become: True
+  include: "{{ role_path }}/tasks/optimize_system.yml"
+  when: 'redis_manage_system_optimization'
+  tags:
+    - 'role::redis'
+    - 'role::redis::install'
+
+
 - name: 'INSTALL | Manage distribution specific installation tasks'
   become: True
   include: "{{ role_path }}/tasks/install/{{ ansible_os_family | lower }}_family.yml"
