--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 # Defaults vars file for redis role
 
 # General
+redis_manage_system_optimization: True
 redis_manage_additional_repository: True
 redis_manage_redis_sentinel: False
 redis_manage_redis_server: True
@@ -12,6 +13,12 @@ redis_repository_cache_valid_time: 3600
 redis_repository_keyserver: "{{ _redis_repository_keyserver | default('') }}"
 redis_repository_key_id: "{{ _redis_repository_key_id | default('') }}"
 redis_repositories: "{{ _redis_repositories | default([]) }}"
+
+# System optimization
+redis_system_optimization_overcommit_memory_value: 1
+redis_system_optimization_overcommit_memory_state: 'present'
+redis_system_optimization_somaxconn_value: 65535
+redis_system_optimization_somaxconn_state: 'present'
 
 
 # Redis server specific vars
