--- a/molecule.yml
+++ b/molecule.yml
@@ -8,8 +8,18 @@ ansible:
   group_vars:
     all:
       redis_manage_redis_sentinel: True
+      sysfs_dependent_services:
+        - 'redis-server'
+      sysfs_rules:
+        - filename: 'transparent-huge-pages.conf'
+          rules:
+            - key: 'kernel/mm/transparent_hugepage/defrag'
+              value: 'never'
+            - key: 'kernel/mm/transparent_hugepage/enabled'
+              value: 'never'
 dependency:
   name: 'galaxy'
+  requirements_file: 'tests/requirements.yml'
 driver:
   name: 'docker'
 docker:
@@ -17,16 +27,19 @@ docker:
     - name: 'redis-docker-jessie'
       image: 'debian'
       image_version: 'jessie'
+      privileged: True
       cap_add:
         - 'SYS_PTRACE'
     - name: 'redis-docker-trusty'
       image: 'ubuntu'
       image_version: 'trusty'
+      privileged: True
       cap_add:
         - 'SYS_PTRACE'
     - name: 'redis-docker-xenial'
       image: 'ubuntu'
       image_version: 'xenial'
+      privileged: True
       cap_add:
         - 'SYS_PTRACE'
 molecule:
