Update default Debian repository

--- a/vars/os_distribution/debian.yml
+++ b/vars/os_distribution/debian.yml
@@ -5,5 +5,5 @@
 _redis_repository_keyserver: 'keyserver.ubuntu.com'
 _redis_repository_key_id: '7E3F070089DF5277'
 _redis_repositories:
-  - repo: 'deb http://ftp.utexas.edu/dotdeb/ stable all'
-  - repo: 'deb-src http://ftp.utexas.edu/dotdeb/ stable all'
+  - repo: 'deb http://packages.dotdeb.org stable all'
+  - repo: 'deb-src http://packages.dotdeb.org stable all'
