--- a/tasks/manage_services.yml
+++ b/tasks/manage_services.yml
@@ -7,6 +7,7 @@
     name: "{{ redis_server_service_name }}"
     state: "{{ redis_server_service_state }}"
     enabled: "{{ redis_server_service_enabled }}"
+  when: "redis_manage_redis_server | bool"
 
 
 - name: 'SERVICE | Manage Redis Sentinel service'
@@ -14,3 +15,4 @@
     name: "{{ redis_sentinel_service_name }}"
     state: "{{ redis_sentinel_service_state }}"
     enabled: "{{ redis_sentinel_service_enabled }}"
+  when: "redis_manage_redis_sentinel | bool"
