--- a/vars/os_family/debian.yml
+++ b/vars/os_family/debian.yml
@@ -22,6 +22,8 @@ _redis_folders:
 # Packages management
 _redis_server_packages:
   - name: 'redis-server'
+_redis_system_dependencies:
+  - name: 'python-redis'
 
 # Service management
 _redis_server_service_name: 'redis-server'
