--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 # Main tasks file for redis role
 
 - name: 'INIT | Manage variables to use for our target'
-  include: "{{ role_path }}/tasks/manage_variables.yml"
+  include_tasks: "{{ role_path }}/tasks/manage_variables.yml"
   tags:
     - 'role::redis'
     - 'role::redis::init'
@@ -11,7 +11,7 @@
 
 - name: 'INSTALL | Manage system settings to increase Redis performances'
   become: True
-  include: "{{ role_path }}/tasks/optimize_system.yml"
+  include_tasks: "{{ role_path }}/tasks/optimize_system.yml"
   when: 'redis_manage_system_optimization'
   tags:
     - 'role::redis'
@@ -20,7 +20,7 @@
 
 - name: 'INSTALL | Manage distribution specific installation tasks'
   become: True
-  include: "{{ role_path }}/tasks/install/{{ ansible_os_family | lower }}_family.yml"
+  include_tasks: "{{ role_path }}/tasks/install/{{ ansible_os_family | lower }}_family.yml"
   tags:
     - 'role::redis'
     - 'role::redis::install'
@@ -28,16 +28,7 @@
 
 - name: 'CONFIG | Manage configuration'
   become: True
-  include: "{{ role_path }}/tasks/manage_configuration.yml"
+  include_tasks: "{{ role_path }}/tasks/manage_configuration.yml"
   tags:
     - 'role::redis'
     - 'role::redis::config'
-
-
-- name: 'SERVICE | Manage Redis services'
-  become: True
-  include: "{{ role_path }}/tasks/manage_services.yml"
-  tags:
-    - 'role::redis'
-    - 'role::redis::config'
-    - 'role::redis::install'
