--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -162,7 +162,7 @@ redis_sentinel_port: 26379
 redis_sentinel_protected_mode: True
 redis_sentinel_announce_ip: null
 redis_sentinel_announce_port: null
-redis_sentinel_pidfile: "{{ redis_folders.pid.path }}/redis-sentinel.pid"
+redis_sentinel_pidfile: "{{ redis_folders.pid_sentinel.path }}/redis-sentinel.pid"
 redis_sentinel_logfile: "{{ redis_folders.log.path }}/redis-sentinel.log"
 redis_sentinel_dir: "{{ redis_folders.data.path }}"
 redis_sentinel_myid: "{{ ansible_hostname | hash('sha1') }}"
