Add installation tests, fix Bionic issue on Travis

--- a/vars/os_distribution/ubuntu/trusty.yml
+++ b/vars/os_distribution/ubuntu/trusty.yml
@@ -2,4 +2,7 @@
 
 # specific vars for Trusty
 
-_redis_folders_pid_sentinel: '/var/run/redis'
+_redis_folders_pid_sentinel: '/var/run/sentinel'
+
+# systemd
+is_systemd_managed: False
