--- a/tasks/install/debian_family.yml
+++ b/tasks/install/debian_family.yml
@@ -49,3 +49,35 @@
   notify: 'HANDLER | Restart Redis Sentinel'
   with_items: "{{ redis_sentinel_packages }}"
   when: 'redis_manage_redis_sentinel'
+
+- name: 'INSTALL | systemd | remove alias name in systemd file'
+  lineinfile:
+    path: "/lib/systemd/system/{{ redis_server_service_name }}.service"
+    regexp: "^Alias="
+    state: 'absent'
+  when:
+    - (ansible_distribution_release | lower) == 'bionic'
+    - is_systemd_managed
+
+- name: 'INSTALL | systemd | remove alias name in systemd file'
+  lineinfile:
+    path: "/lib/systemd/system/{{ redis_sentinel_service_name }}.service"
+    regexp: "^Alias="
+    state: 'absent'
+  when:
+    - (ansible_distribution_release | lower) == 'bionic'
+    - is_systemd_managed
+
+- name: 'INSTALL | enable redis-server service'
+  systemd:
+    name: "{{ redis_server_service_name }}.service"
+    daemon_reload: True
+    enabled: "{{ redis_server_service_enabled }}"
+  when: is_systemd_managed
+
+- name: 'INSTALL | enable redis-sentinel service'
+  systemd:
+    name: "{{ redis_sentinel_service_name }}.service"
+    daemon_reload: True
+    enabled: "{{ redis_sentinel_service_enabled }}"
+  when: is_systemd_managed
