--- a/vars/os_family/debian.yml
+++ b/vars/os_family/debian.yml
@@ -12,12 +12,14 @@ _redis_folders:
     path: '/var/log/redis'
   pid:
     path: '/var/run/redis'
+  pid_sentinel:
+    path: "{{ _redis_folders_pid_sentinel }}"
   socket:
     path: '/var/run/redis'
 
 
 # Redis server specific vars
-#------------------------------------------------------------------------------
+# -----------------------------------------------------------------------------
 
 # Packages management
 _redis_server_packages:
@@ -30,7 +32,7 @@ _redis_server_service_name: 'redis-server'
 
 
 # Redis sentinel specific vars
-#------------------------------------------------------------------------------
+# -----------------------------------------------------------------------------
 
 # Packages management
 _redis_sentinel_packages:
