--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,21 @@
 
 # Travis configuration
 
-dist: 'trusty'
+dist: 'xenial'
 sudo: 'required'
 
 services:
   - 'docker'
 
 language: 'python'
+python: '2.7'
 
 env:
   matrix:
-    - TOXENV='py27-ansible20'
-    - TOXENV='py27-ansible21'
-    - TOXENV='py27-ansible22'
-    - TOXENV='py27-ansible23'
+    - TOXENV='py27-ansible24'
+    - TOXENV='py27-ansible25'
+    - TOXENV='py27-ansible26'
+    - TOXENV='py27-ansible27'
 
 install:
   - 'pip install tox-travis'
