--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,22 @@
 ---
 
 galaxy_info:
-  author: 'Alexandre Chaussier'
+  role_name: 'redis'
+  author: 'A Chaussier, L Machetel'
   description: 'Ansible role to install and configure Redis'
-  company: 'Infopen (http://www.infopen.pro)'
+  company: 'Temelio (https://www.temelio.com)'
   license: 'MIT'
-  min_ansible_version: '2.0'
+  min_ansible_version: '2.4'
   github_branch: 'master'
   platforms:
     - name: 'Debian'
       versions:
-        - 'jessie'
+        - 'stretch'
     - name: 'Ubuntu'
       versions:
         - 'trusty'
         - 'xenial'
+        - 'bionic'
   galaxy_tags:
     - 'database'
     - 'nosql'
